sandbox-codebase/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__AccountIsSetupForSmartPostReturns__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__AccountIsSetupForSmartPostReturns__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Setup for FedEx Ground® Economy Returns</label>
    <type>Checkbox</type>
</CustomField>