sandbox-codebase/objects/zkmulti__Shipmate_Preference_Info__c/fields/zkmulti__FedExSmartPostHubId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__FedExSmartPostHubId__c</fullName>
    <label>FedEx Hub ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>